fix: 포인트정책타입 repository 이름수정